--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Cmake
 CMakeCache.txt
 CMakeFiles
 CMakeScripts
@@ -5,3 +6,24 @@ Makefile
 cmake_install.cmake
 install_manifest.txt
 CTestTestfile.cmake
+
+# Rethink
+rethink.log
+*.pyc
+
+# swap
+*.swp
+*.swo
+*~
+
+# temporary files which can be created if a process still has a handle open of a deleted file
+.fuse_hidden*
+
+# KDE directory preferences
+.directory
+
+# Linux trash folder which might appear on any partition or disk
+.Trash-*
+
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
